fix: spacing on hero

--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -2,8 +2,8 @@
 
 .wrapper {
   @include verticallyCenteredSideBySide;
-  padding-top: var(--spacing-xl);
-  padding-bottom: var(--spacing-xl);
+  padding-top: var(--spacing-lg);
+  padding-bottom: var(--spacing-lg);
 }
 
 .title {
